# Monkeycode

./: .gitignore  flake.nix  meson.build
include/analysis/: HistoryAnalyzer.hpp  ReportPrinter.hpp  TestReportCreator.hpp
include/controller/: AppController.hpp
include/generator/: ExpressionGenerator.hpp
include/io/: ImageWriter.hpp  ReportPrinter.hpp  TestHistoryLoader.hpp
include/model/: CppCodingExpressions.hpp  Expression.hpp  Graph.hpp  Literal.hpp  Report.hpp  ReportDto.hpp  TestHistory.hpp
include/rendering/: GraphRenderer.hpp
include/rendering/model/: Canvas.hpp  Frame.hpp  RenderObjects.hpp
include/rendering/util/: ColorUtil.hpp  GraphUtil.hpp  HistoryUtil.hpp
include/runner/: TestRunner.hpp
include/util/: RandomUtil.hpp  StringGenerationUtil.hpp  StringUtil.hpp  TimeUtil.hpp
include/util/vectors/: IVec2.hpp  Vec2.hpp  Vec3.hpp
resources/: history.csv
resources/history/: history_0.csv
scripts/: cleanup.sh  create_tables.sql  index_colors.sh
src/: main.cpp
src/analysis/: HistoryAnalyzer.cpp  ReportPrinter.cpp  TestReportCreator.cpp
src/controller/: AppController.cpp
src/generator/: ExpressionGenerator.cpp
src/io/: ImageWriter.cpp  ReportPrinter.cpp  TestHistoryLoader.cpp
src/model/: CppCodingExpressions.cpp
src/rendering/: GraphRenderer.cpp
src/runner/: TestRunner.cpp
